[package]
name = "libankra"
version = "0.1.0"
edition = "2021"

[lib]
name = "ankra"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
zmerald = { git = "https://github.com/liabri/zmerald" }
csv = "1.1.6"
thiserror = "1.0.36"
xdg = "2.4.1"